// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress render format 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width: 50%; height: 8px; border-radius: 100px;"
        />
        <div
          class="ant-progress-success-bg"
          style="width: 10%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      50 10
    </span>
  </div>
</div>
`;

exports[`Progress render negetive progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width: 0%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render negetive successPercent 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width: 50%; height: 8px; border-radius: 100px;"
        />
        <div
          class="ant-progress-success-bg"
          style="width: 0%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width: 100%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      <i
        class="anticon anticon-check-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="check-circle"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292c-12.7 17.7-39 17.7-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress with info 1`] = `
<div
  class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-default"
>
  <div>
    <div
      class="ant-progress-outer"
    >
      <div
        class="ant-progress-inner"
      >
        <div
          class="ant-progress-bg"
          style="width: 100%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="ant-progress-text"
    >
      <i
        class="anticon anticon-check-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="check-circle"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292c-12.7 17.7-39 17.7-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;
